network-policy/base/global-policies/egress-all-allow.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-all-allow
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector:
    matchExpressions:
    - key: k8s:app.kubernetes.io/name
      operator: NotIn
      values:
      - meows
  egress:
  - toEndpoints:
    - matchExpressions:
      - key: reserved:host
        operator: DoesNotExist
      - key: reserved:remote-node
        operator: DoesNotExist
      - key: reserved:kube-apiserver
        operator: DoesNotExist
