network-policy/base/global-policies/egress-backyard-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-bmc-deny
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  endpointSelector:
    matchExpressions:
    - key: k8s:io.kubernetes.pod.namespace
      operator: NotIn
      values:
      - bmc-reverse-proxy
  egressDeny:
  - toCIDR:
    - 10.72.16.0/20
    - 10.76.16.0/20
    - 10.78.16.0/20
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-bastion-deny
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  endpointSelector: {}
  egressDeny:
  - toCIDR:
    - 10.72.48.0/24
    - 10.72.80.0/24
    - 10.76.48.0/24
    - 10.76.80.0/24
    - 10.78.48.0/24
    - 10.78.80.0/24
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-switch-deny
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  endpointSelector:
    matchExpressions:
    - key: k8s:app.kubernetes.io/instance
      operator: NotIn
      values:
      - network-nat
  egressDeny:
  - toCIDR:
    - 10.72.0.0/20
    - 10.76.0.0/20
    - 10.78.0.0/20
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-node-deny
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  endpointSelector:
    matchExpressions:
    - key: k8s:app.kubernetes.io/name
      operator: NotIn
      values:
      - teleport
    - key: k8s:app.kubernetes.io/name
      operator: NotIn
      values:
      - vmagent
  egressDeny:
  - toCIDR:
    - 10.69.0.0/16
