network-policy/base/global-policies/ingress-cluster-allow.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-cluster-allow
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector:
    matchExpressions:
    - key: k8s:app.kubernetes.io/instance
      operator: NotIn
      values:
      - network-nat
  ingress:
  - fromEntities:
    - cluster
  - fromCIDR:
    - 10.0.0.0/8
