network-policy/base/global-policies/scheduler.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-scheduler-metrics-allow
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector:
    matchExpressions:
    - key: k8s:io.kubernetes.pod.namespace
      operator: NotIn
      values:
      - meows-runner
  egress:
    - toEntities:
      - kube-apiserver
      toPorts:
      - ports:
        - port: "10251"
          protocol: TCP
